--- a/app/src/main/res/layout/fragment_track_basestion.xml
+++ b/app/src/main/res/layout/fragment_track_basestion.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <include layout="@layout/toolbar" />
@@ -17,6 +18,42 @@
         android:layout_height="0dp"
         android:layout_weight="1" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/recangle"
+            android:gravity="center"
+            android:text="数据路径:"
+            android:textColor="#090606" />
+
+        <TextView
+            android:id="@+id/text_fragment_basestion_track_path"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:background="@drawable/recangle"
+            android:gravity="left"
+            android:text="/优易/测试log.csv"
+            android:textColor="#3F3E3E" />
+
+        <TextView
+            android:id="@+id/text_fragment_basestion_track_choose"
+            android:layout_width="63dp"
+            android:layout_height="wrap_content"
+            android:background="@color/brown"
+            android:gravity="center"
+            android:text="数据选择"
+            android:textColor="#3F51B5"
+            android:onClick="true"
+            tools:ignore="OnClick" />
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/btn_fragment_basestion_database_import_track"
