--- a/app/src/main/res/layout/recyclerview_item_thrid_failure.xml
+++ b/app/src/main/res/layout/recyclerview_item_thrid_failure.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/recangle"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:singleLine="true">
 
         <TextView
             android:id="@+id/textview_recyclerview_item_Failure_name"
