--- a/app/src/main/res/layout/fragment_third_tab.xml
+++ b/app/src/main/res/layout/fragment_third_tab.xml
@@ -1,120 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#EAEAEA">
+    android:background="@color/backGround"
+    android:orientation="vertical">
 
-    <RelativeLayout
+    <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        tools:ignore="MissingConstraints" />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="#FFFFFF"
-        tools:ignore="MissingConstraints">   <!--标题--><!--margintop 上面距离-->
-        <TextView
-            android:id="@+id/textView_fragment_thrid_tab_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:onClick="true"
-            android:text="无线指标"
-            android:textColor="#1F1F1F"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            tools:ignore="OnClick" />
-    </RelativeLayout>
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/linearlayout_fragment_thrid_tab_recent_wireless1"
-        android:layout_width="match_parent"
-        android:layout_height="220dp"
-        android:orientation="vertical"
-        tools:ignore="MissingConstraints">  <!-- 无线指标版块-->
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:background="#FFFFFF"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="5"
-                android:background="@drawable/recangle"
-                android:gravity="center"
-                android:text="小区"
-                android:textColor="#0A0A0A"
-                android:textSize="12dp" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:background="@drawable/recangle"
-                android:gravity="center"
-                android:text="接通率"
-                android:textColor="#0A0A0A"
-                android:textSize="12dp" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:background="@drawable/recangle"
-                android:gravity="center"
-                android:text="掉线率"
-                android:textColor="#0A0A0A"
-                android:textSize="12dp" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:background="@drawable/recangle"
-                android:gravity="center"
-                android:text="MR覆盖率"
-                android:textColor="#0A0A0A"
-                android:textSize="12dp" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:background="@drawable/recangle"
-                android:gravity="center"
-                android:text="干扰"
-                android:textColor="#0A0A0A"
-                android:textSize="12dp" />
-
-        </LinearLayout>
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerView_fragment_third_tab_recent_record1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#FFFFFF" />
-    </LinearLayout>  <!-- 无线指标板块 -->
-
-    <LinearLayout
-        android:id="@+id/linearlayout_fragment_thrid_tab_recent_shebei"
-        android:layout_width="match_parent"
-        android:layout_height="220dp"
-        android:layout_marginTop="235dp"
-        android:orientation="vertical"
-        tools:ignore="MissingConstraints">  <!-- 设备状态-->
+        android:layout_height="200dp"
+        android:layout_margin="3dp"
+        app:cardCornerRadius="9dp"
+        app:cardElevation="4dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#FFFFFF">   <!--标题-->
+            tools:ignore="MissingConstraints" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#FFFFFF"
+            tools:ignore="MissingConstraints">   <!--标题--><!--margintop 上面距离-->
+            <TextView
+                android:id="@+id/textView_fragment_thrid_tab_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:onClick="true"
+                android:text="无线指标"
+                android:textColor="#1F1F1F"
+                android:textSize="14sp"
+                android:textStyle="bold"
+                tools:ignore="OnClick" />
+        </RelativeLayout>
+
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/linearlayout_fragment_thrid_tab_recent_wireless1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            tools:ignore="MissingConstraints">  <!-- 无线指标版块-->
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:background="#FFFFFF"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="5"
+                    android:background="@drawable/recangle"
+                    android:gravity="center"
+                    android:text="小区"
+                    android:textColor="#0A0A0A"
+                    android:textSize="12dp" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:background="@drawable/recangle"
+                    android:gravity="center"
+                    android:text="接通率"
+                    android:textColor="#0A0A0A"
+                    android:textSize="12dp" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:background="@drawable/recangle"
+                    android:gravity="center"
+                    android:text="掉线率"
+                    android:textColor="#0A0A0A"
+                    android:textSize="12dp" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:background="@drawable/recangle"
+                    android:gravity="center"
+                    android:text="MR覆盖率"
+                    android:textColor="#0A0A0A"
+                    android:textSize="12dp" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:background="@drawable/recangle"
+                    android:gravity="center"
+                    android:text="干扰"
+                    android:textColor="#0A0A0A"
+                    android:textSize="12dp" />
+
+            </LinearLayout>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerView_fragment_third_tab_recent_record1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#FFFFFF" />
+        </LinearLayout>  <!-- 无线指标板块 -->
+    </android.support.v7.widget.CardView>
+
+
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_margin="3dp"
+        app:cardCornerRadius="9dp"
+        app:cardElevation="4dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#FFFFFF"
+            tools:ignore="MissingConstraints">
             <!--margintop 上面距离-->
             <TextView
                 android:id="@+id/textView_fragment_thrid_tab_shebei"
@@ -127,74 +136,86 @@
                 android:textStyle="bold" />
         </RelativeLayout>
 
-        <LinearLayout
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#FFFFFF"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            tools:ignore="MissingConstraints">  <!-- 无线指标版块-->
 
-            <TextView
-                android:layout_width="0dp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="4"
-                android:background="@drawable/recangle"
-                android:gravity="center"
-                android:text="小区"
-                android:textColor="#0A0A0A"
-                android:textSize="12dp" />
+                android:layout_marginTop="20dp"
+                android:background="#FFFFFF"
+                android:orientation="horizontal">
 
-            <!--<TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:background="@drawable/recangle"
-                android:gravity="center"
-                android:text="是否告警"
-                android:textColor="#0A0A0A"
-                android:textSize="12dp" />-->
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="4"
+                    android:background="@drawable/recangle"
+                    android:gravity="center"
+                    android:text="小区"
+                    android:textColor="#0A0A0A"
+                    android:textSize="12dp" />
 
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:background="@drawable/recangle"
-                android:gravity="center"
-                android:text="是否告警/告警码"
-                android:textColor="#0A0A0A"
-                android:textSize="12dp" />
+                <!--<TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:background="@drawable/recangle"
+                    android:gravity="center"
+                    android:text="是否告警"
+                    android:textColor="#0A0A0A"
+                    android:textSize="12dp" />-->
 
-            <TextView
-                android:layout_width="0dp"
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:background="@drawable/recangle"
+                    android:gravity="center"
+                    android:text="是否告警/告警码"
+                    android:textColor="#0A0A0A"
+                    android:textSize="12dp" />
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:background="@drawable/recangle"
+                    android:gravity="center"
+                    android:text="告警发生时间"
+                    android:textColor="#0A0A0A"
+                    android:textSize="12dp" />
+            </LinearLayout>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerView_fragment_third_tab_recent_record2"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:background="@drawable/recangle"
-                android:gravity="center"
-                android:text="告警发生时间"
-                android:textColor="#0A0A0A"
-                android:textSize="12dp" />
+                android:background="#FFFFFF" />
         </LinearLayout>
+    </android.support.v7.widget.CardView>
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerView_fragment_third_tab_recent_record2"
+    <android.support.v7.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="3dp"
+        app:cardCornerRadius="9dp"
+        app:cardElevation="4dp">
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#FFFFFF" />
-    </LinearLayout>  <!-- 告警指标版快 -->
-
-    <LinearLayout
-        android:id="@+id/linearlayout_fragment_thrid_tab_recent_comlain"
-        android:layout_width="match_parent"
-        android:layout_height="260dp"
-        android:layout_marginTop="470dp"
-        android:orientation="vertical"
-        tools:ignore="MissingConstraints">  <!-- 设备状态-->
+            tools:ignore="MissingConstraints" />
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#FFFFFF"
-            tools:ignore="MissingConstraints">   <!--标题-->
-            <!--margintop 上面距离-->
+            tools:ignore="MissingConstraints">
+
             <TextView
                 android:id="@+id/textView_fragment_thrid_tab_complain"
                 android:layout_width="wrap_content"
@@ -206,17 +227,17 @@
                 android:textStyle="bold" />
         </RelativeLayout>
 
-        <LinearLayout
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/linearlayout_fragment_thrid_tab_recent_complain"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:divider="@drawable/divider_line"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:visibility="visible">  <!-- 投诉板块-->
+            tools:ignore="MissingConstraints">  <!-- 无线指标版块-->
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
                 android:background="#FFFFFF"
                 android:orientation="horizontal">
 
@@ -266,6 +287,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#FFFFFF" />
-        </LinearLayout>  <!-- 投诉板块 -->
-    </LinearLayout>  <!-- 投诉板块 -->
-</RelativeLayout><!--    </LinearLayout>-->
+        </LinearLayout>  <!-- 无线指标板块 -->
+    </android.support.v7.widget.CardView>
+</LinearLayout>
