--- a/app/src/main/res/layout/fragment_forth_tab.xml
+++ b/app/src/main/res/layout/fragment_forth_tab.xml
@@ -24,8 +24,6 @@
             android:textSize="18dp"
             app:layout_constraintTop_toTopOf="parent" />
 
-
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -42,7 +40,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="8dp"
                 android:background="@color/textBackGround">
 
                 <CheckBox
@@ -97,7 +95,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="8dp"
                 android:background="@color/textBackGround">
 
                 <CheckBox
@@ -153,7 +151,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="8dp"
                 android:background="@color/textBackGround">
 
                 <CheckBox
@@ -219,7 +217,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="8dp"
                 android:background="@color/textBackGround">
 
                 <CheckBox
@@ -272,10 +270,9 @@
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="375dp"
+            android:layout_marginTop="347dp"
             android:background="@color/backGround"
             tools:ignore="MissingConstraints">
-
 
             <Button
                 android:id="@+id/btn_fragment_forth_tab_import"
@@ -298,17 +295,61 @@
 
         </RelativeLayout>
 
-
         <Button
             android:id="@+id/btn_fragment_forth_tab_about"
-            android:layout_width="match_parent"
+            android:layout_width="140dp"
             android:layout_height="40dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="100dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="430dp"
+            android:layout_weight="1"
             android:background="#368797AE"
             android:text="关于"
             android:textSize="18dp" />
+
+        <Button
+            android:id="@+id/btn_fragment_forth_tab_login"
+            android:layout_width="140dp"
+            android:layout_height="40dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="430dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1"
+            android:background="#368797AE"
+            android:text="未登录"
+            android:textSize="18dp" />
+
+
+        <!--        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+        <!--            xmlns:tools="http://schemas.android.com/tools"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:layout_marginBottom="150dp"-->
+        <!--            android:layout_alignParentBottom="true"-->
+        <!--            android:background="@color/backGround"-->
+        <!--            tools:ignore="MissingConstraints">-->
+
+        <!--            <Button-->
+        <!--                android:id="@+id/btn_fragment_forth_tab_login"-->
+        <!--                android:layout_width="60dp"-->
+        <!--                android:layout_height="35dp"-->
+        <!--                android:layout_alignParentRight="true"-->
+        <!--                android:layout_marginRight="60dp"-->
+        <!--                android:layout_centerHorizontal="true"-->
+        <!--                android:background="#368797AE"-->
+        <!--                android:text="登录"-->
+        <!--                android:textSize="18dp" />-->
+
+        <!--            <Button-->
+        <!--                android:id="@+id/btn_fragment_forth_tab_about"-->
+        <!--                android:layout_width="match_parent"-->
+        <!--                android:layout_height="40dp"-->
+        <!--                android:layout_alignParentBottom="true"-->
+        <!--                android:layout_centerHorizontal="true"-->
+        <!--                android:layout_marginBottom="100dp"-->
+        <!--                android:background="#368797AE"-->
+        <!--                android:text="关于"-->
+        <!--                android:textSize="18dp" />-->
+        <!--        </RelativeLayout>-->
 
     </RelativeLayout>
 
