--- a/app/src/main/res/layout/recyclerview_item_fifth_problem.xml
+++ b/app/src/main/res/layout/recyclerview_item_fifth_problem.xml
@@ -2,113 +2,315 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@drawable/recangle2"
+    android:layout_height="match_parent"
+
     android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="80dp"
-        android:layout_height="wrap_content"
+        android:layout_width="90dp"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         tools:ignore="MissingConstraints">
 
         <TextView
-            android:id="@+id/textview_recyclerview_item_detail_time"
+            android:id="@+id/textview_recyclerview_item_problem_pDistrict"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="10"
             android:background="@drawable/recangle"
             android:gravity="center"
-            android:textSize="11sp"
-            android:textColor="#0A0A0A"/>
+            android:text=""
+            android:textColor="@color/textColor1"
+            android:singleLine="true"
+            android:textSize="11dp" />
 
         <TextView
-            android:id="@+id/textview_recyclerview_item_detail_connected"
+            android:id="@+id/textview_recyclerview_item_problem_pTime"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="10"
             android:background="@drawable/recangle"
             android:gravity="center"
-            android:textSize="11sp"
-            android:textColor="#0A0A0A"/>
+            android:text=""
+            android:textColor="@color/textColor1"
+            android:textSize="12dp" />
         <TextView
-            android:id="@+id/textview_recyclerview_item_detail_paging"
+            android:id="@+id/textview_recyclerview_item_problem_pCoverage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="10"
             android:background="@drawable/recangle"
             android:gravity="center"
-            android:textSize="11sp"
-            android:textColor="#0A0A0A"/>
+            android:text=""
+            android:textColor="@color/textColor1"
+            android:textSize="12dp" />
         <TextView
-            android:id="@+id/textview_recyclerview_item_detail_handover"
+            android:id="@+id/textview_recyclerview_item_problem_pWeakcoverage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="10"
             android:background="@drawable/recangle"
             android:gravity="center"
-            android:textSize="11sp"
-            android:textColor="#0A0A0A"/>
+            android:text=""
+            android:textColor="@color/textColor1"
+            android:textSize="12dp" />
         <TextView
-            android:id="@+id/textview_recyclerview_item_detail_release"
+            android:id="@+id/textview_recyclerview_item_problem_pWeakCoverageOutdoor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="10"
             android:background="@drawable/recangle"
             android:gravity="center"
-            android:textSize="11sp"
-            android:textColor="#0A0A0A"/>
+            android:text=""
+            android:textColor="@color/textColor1"
+            android:textSize="12dp" />
         <TextView
-            android:id="@+id/textview_recyclerview_item_detail_cover"
+            android:id="@+id/textview_recyclerview_item_problem_pWeakCoverageIndoor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="10"
             android:background="@drawable/recangle"
             android:gravity="center"
-            android:textSize="11sp"
-            android:textColor="#0A0A0A"/>
+            android:text=""
+            android:textColor="@color/textColor1"
+            android:textSize="12dp" />
         <TextView
-            android:id="@+id/textview_recyclerview_item_detail_usercount"
+            android:id="@+id/textview_recyclerview_item_problem_pHighLoad"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="10"
             android:background="@drawable/recangle"
             android:gravity="center"
-            android:textSize="11sp"
-            android:textColor="#0A0A0A"/>
+            android:text=""
+            android:textColor="@color/textColor1"
+            android:textSize="12dp" />
+<!--        <TextView-->
+<!--            android:id="@+id/textview_recyclerview_item_problem_pNotExpanded"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_margin="2dp"-->
+<!--            android:layout_weight="10"-->
+<!--            android:background="@drawable/recangle"-->
+<!--            android:gravity="center"-->
+<!--            android:text=""-->
+<!--            android:textColor="@color/textColor1"-->
+<!--            android:textSize="12dp" />-->
         <TextView
-            android:id="@+id/textview_recyclerview_item_detail_prbuseup"
+            android:id="@+id/textview_recyclerview_item_problem_pHighInterference"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="10"
             android:background="@drawable/recangle"
             android:gravity="center"
-            android:textSize="11sp"
-            android:textColor="#0A0A0A"/>
+            android:text=""
+            android:textColor="@color/textColor1"
+            android:textSize="12dp" />
         <TextView
-            android:id="@+id/textview_recyclerview_item_detail_prbusedown"
+            android:id="@+id/textview_recyclerview_item_problem_pHighInterferenceFDD"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="10"
             android:background="@drawable/recangle"
             android:gravity="center"
-            android:textSize="11sp"
-            android:textColor="#0A0A0A"/>
+            android:text=""
+            android:textColor="@color/textColor1"
+            android:textSize="12dp" />
         <TextView
-            android:id="@+id/textview_recyclerview_item_detail_voconnected"
+            android:id="@+id/textview_recyclerview_item_problem_pHighInterferenceTDD"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="10"
             android:background="@drawable/recangle"
             android:gravity="center"
-            android:textSize="11sp"
-            android:textColor="#0A0A0A"/>
+            android:text=""
+            android:textColor="@color/textColor1"
+            android:textSize="12dp" />
         <TextView
-            android:id="@+id/textview_recyclerview_item_detail_voerabconnet"
+            android:id="@+id/textview_recyclerview_item_problem_pLowOm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="10"
             android:background="@drawable/recangle"
             android:gravity="center"
-            android:textSize="11sp"
-            android:textColor="#0A0A0A"/>
+            android:text=""
+            android:textColor="@color/textColor1"
+            android:textSize="12dp" />
         <TextView
-            android:id="@+id/textview_recyclerview_item_detail_vodelay"
+            android:id="@+id/textview_recyclerview_item_problem_pHighDrop"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="10"
             android:background="@drawable/recangle"
             android:gravity="center"
-            android:textSize="11sp"
-            android:textColor="#0A0A0A"/>
+            android:text=""
+            android:textColor="@color/textColor1"
+            android:textSize="12dp" />
+        <TextView
+            android:id="@+id/textview_recyclerview_item_problem_pUpwardHighDrop"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="10"
+            android:background="@drawable/recangle"
+            android:gravity="center"
+            android:text=""
+            android:textColor="@color/textColor1"
+            android:textSize="12dp" />
+        <TextView
+            android:id="@+id/textview_recyclerview_item_problem_pDownHighDrop"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="10"
+            android:background="@drawable/recangle"
+            android:gravity="center"
+            android:text=""
+            android:textColor="@color/textColor1"
+            android:textSize="12dp" />
+        <TextView
+            android:id="@+id/textview_recyclerview_item_problem_pLowESRVCCSwitch"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="10"
+            android:background="@drawable/recangle"
+            android:gravity="center"
+            android:text=""
+            android:textColor="@color/textColor1"
+            android:textSize="12dp" />
+        <TextView
+            android:id="@+id/textview_recyclerview_item_problem_pLowCQI"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="10"
+            android:background="@drawable/recangle"
+            android:gravity="center"
+            android:text=""
+            android:textColor="@color/textColor1"
+            android:textSize="12dp" />
+        <TextView
+            android:id="@+id/textview_recyclerview_item_problem_pLongTimeWithdraw"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="10"
+            android:background="@drawable/recangle"
+            android:gravity="center"
+            android:text=""
+            android:textColor="@color/textColor1"
+            android:textSize="12dp" />
+        <TextView
+            android:id="@+id/textview_recyclerview_item_problem_pMaintainSolve"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="10"
+            android:background="@drawable/recangle"
+            android:gravity="center"
+            android:text=""
+            android:textColor="@color/textColor1"
+            android:textSize="12dp" />
+        <TextView
+            android:id="@+id/textview_recyclerview_item_problem_p4GAvailable"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="10"
+            android:background="@drawable/recangle"
+            android:gravity="center"
+            android:text=""
+            android:textColor="@color/textColor1"
+            android:textSize="12dp" />
+        <TextView
+            android:id="@+id/textview_recyclerview_item_problem_pIndoorZeroFlow"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="10"
+            android:background="@drawable/recangle"
+            android:gravity="center"
+            android:text=""
+            android:textColor="@color/textColor1"
+            android:textSize="12dp" />
+        <TextView
+            android:id="@+id/textview_recyclerview_item_problem_pLongTimeWithdrawQuantity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="10"
+            android:background="@drawable/recangle"
+            android:gravity="center"
+            android:text=""
+            android:textColor="@color/textColor1"
+            android:textSize="12dp" />
+        <TextView
+            android:id="@+id/textview_recyclerview_item_problem_pCoverageProblemQuantity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="10"
+            android:background="@drawable/recangle"
+            android:gravity="center"
+            android:text=""
+            android:textColor="@color/textColor1"
+            android:textSize="12dp" />
+        <TextView
+            android:id="@+id/textview_recyclerview_item_problem_pPerceptionProblemQuantity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="10"
+            android:background="@drawable/recangle"
+            android:gravity="center"
+            android:text=""
+            android:textColor="@color/textColor1"
+            android:textSize="12dp" />
+        <TextView
+            android:id="@+id/textview_recyclerview_item_problem_pInterferenceProblemQuantity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="10"
+            android:background="@drawable/recangle"
+            android:gravity="center"
+            android:text=""
+            android:textColor="@color/textColor1"
+            android:textSize="12dp" />
+        <TextView
+            android:id="@+id/textview_recyclerview_item_problem_pMaintainProblemQuantity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="10"
+            android:background="@drawable/recangle"
+            android:gravity="center"
+            android:text=""
+            android:textColor="@color/textColor1"
+            android:textSize="12dp" />
+        <TextView
+            android:id="@+id/textview_recyclerview_item_problem_pOtherProblemQuantity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="10"
+            android:background="@drawable/recangle"
+            android:gravity="center"
+            android:text=""
+            android:textColor="@color/textColor1"
+            android:textSize="12dp" />
 
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
